# audiomind-mlops

./: .env.example  .gitignore  .pre-commit-config.yaml  BACKLOG.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  new_step.yml
.github/instructions/: python-testing.instructions.md
.github/skills/scaffold-tests/: SKILL.md
.github/skills/scaffold-tests/templates/: conftest.py.md
.github/workflows/: ci.yml  publish.yml  step-ci.yml
docs/: adding-a-pipeline.md  architecture.md  engineering-audit.md  final-quality-gate.md  github-manual-operations.md  local-setup.md  model-deploy-workflow.md  quickstart.md
infra/helm/argocd/: Chart.yaml  values-dev.yaml  values.yaml
infra/helm/audiomind/: .helmignore  Chart.yaml  values-dev.yaml  values.yaml
infra/helm/audiomind/templates/: _helpers.tpl  serviceaccount.yaml
infra/helm/audiomind/templates/api-gateway/: deployment.yaml  hpa.yaml  ingress.yaml  (+2 more)
infra/helm/external-secrets/: Chart.yaml  values.yaml
infra/helm/gpu-operator/: Chart.yaml  values-dev.yaml  values.yaml
infra/helm/inferflow/: Chart.yaml  values-dev.yaml  values.yaml
infra/helm/inferflow/templates/: _helpers.tpl  serviceaccount.yaml
infra/helm/ingress/: Chart.yaml  values-dev.yaml  values.yaml
infra/helm/keda/: Chart.yaml  values.yaml
infra/helm/mlflow/: Chart.yaml  values.yaml
infra/helm/moiraweave/: Chart.yaml  values-dev.yaml  values.yaml
infra/helm/moiraweave/templates/: _helpers.tpl  serviceaccount.yaml
infra/helm/monitoring/: Chart.yaml  values-dev.yaml  values.yaml
infra/k8s/argo-rollouts/: analysis-template-vllm.yaml  rollout-vllm.yaml
infra/k8s/argocd/: app-of-apps.yaml  applicationset.yaml  project.yaml
infra/k8s/cert-manager/: cluster-issuer-dev.yaml
infra/k8s/envs/dev/: app.yaml
infra/k8s/envs/prod/: app.yaml
infra/k8s/envs/staging/: app.yaml
infra/k8s/gpu/: time-slicing-config.yaml
infra/k8s/keda/: api-gateway-scaledobject.yaml  worker-scaledobject.yaml
infra/k8s/monitoring/: cronjob-drift-detector.yaml  grafana-dashboard-gpu-utilization.yaml  grafana-dashboard-llm-inference.yaml  grafana-dashboard-system-overview.yaml  podmonitor-audiomind-worker.yaml  podmonitor-moiraweave-worker.yaml  prometheusrule-audiomind.yaml  prometheusrule-gpu.yaml  prometheusrule-inferflow.yaml  prometheusrule-moiraweave.yaml  prometheusrule-vllm.yaml  servicemonitor-audiomind.yaml  servicemonitor-dcgm.yaml  servicemonitor-inferflow.yaml  servicemonitor-moiraweave.yaml  servicemonitor-vllm.yaml
infra/k8s/namespaces/audiomind/: limit-range.yaml  resource-quota.yaml
infra/k8s/namespaces/inferflow/: limit-range.yaml  resource-quota.yaml
infra/k8s/namespaces/moiraweave/: limit-range.yaml  resource-quota.yaml
infra/kind/: cluster.yaml
infra/terraform/envs/aws/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/terraform/envs/gcp/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/terraform/envs/local/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/terraform/modules/k8s-cluster/: README.md  outputs.tf  variables.tf
pipelines/audio-rag/: pipeline.yaml
pipelines/image-search/: pipeline.yaml
scripts/: demo.sh  promote-model.sh  setup-labels.sh  setup-repo-hygiene.sh
services/api-gateway/: .env.example  Dockerfile  pyproject.toml  requirements.txt
services/api-gateway/.agents/skills/: fastapi
services/api-gateway/app/: config.py  main.py
services/api-gateway/app/dependencies/: auth.py  qdrant.py  redis.py
services/api-gateway/app/middleware/: rate_limit.py  telemetry.py
services/api-gateway/app/models/: auth.py  health.py  jobs.py  pipelines.py  search.py
services/api-gateway/app/routes/: auth.py  health.py  jobs.py  pipelines.py  search.py
services/api-gateway/tests/: conftest.py  test_auth.py  test_health.py  test_jobs.py  test_pipelines.py  test_search.py
services/drift-detector/: .env.example  Dockerfile  pyproject.toml
services/drift-detector/app/: main.py  settings.py
services/shared/: pyproject.toml
services/shared/audiomind_shared/: __init__.py  pipeline.py  schemas.py  streams.py
services/shared/inferflow_shared/: __init__.py  streams.py
services/shared/moiraweave_shared/: __init__.py  pipeline.py  schemas.py  streams.py
services/step-sdk/: pyproject.toml
services/step-sdk/inferflow_step_sdk/: __init__.py  base.py  models.py
services/step-sdk/moiraweave_step_sdk/: __init__.py  base.py  models.py
services/step-sdk/tests/: test_base.py
services/worker/: .env.example  Dockerfile  pyproject.toml
services/worker/app/: config.py  consumer.py  indexer.py  main.py  mlflow_logger.py  pipeline_consumer.py  pipeline_runner.py
services/worker/app/processors/: transcribe.py
services/worker/tests/: conftest.py  test_consumer.py  test_indexer.py  test_pipeline_runner.py
steps/audio-transcribe-whisper/: pyproject.toml
steps/audio-transcribe-whisper/app/: step.py
steps/audio-transcribe-whisper/tests/: conftest.py  test_step.py
steps/text-embed-fastembed/: pyproject.toml
steps/text-embed-fastembed/app/: step.py
steps/text-embed-fastembed/tests/: test_step.py
steps/vector-index-qdrant/: pyproject.toml
steps/vector-index-qdrant/app/: step.py
steps/vector-index-qdrant/tests/: test_step.py
steps/vector-search-qdrant/: pyproject.toml
steps/vector-search-qdrant/app/: step.py
steps/vector-search-qdrant/tests/: test_step.py
steps/vision-clip/: pyproject.toml  step.yaml
steps/vision-clip/app/: step.py
steps/vision-clip/tests/: test_step.py
tests/integration/: test_constants_alignment.py
tools/inferflow-cli/: pyproject.toml
tools/inferflow-cli/inferflow_cli/: __init__.py  io.py  main.py  models.py
tools/inferflow-cli/tests/: test_cli_smoke.py
tools/moira-cli/: pyproject.toml
tools/moira-cli/moira_cli/: __init__.py  io.py  main.py  models.py
tools/moira-cli/tests/: test_cli_smoke.py
(+44 files in other folders)
