[project]
name = "audiomind-mlops"
version = "0.1.0"
description = "MLOps platform: audio → Whisper STT → LLM analysis → RAG search"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = []

# Root is a virtual project: it owns dev tooling but is not itself a library.
[tool.uv]
package = false

[tool.uv.workspace]
members = ["services/*"]

[dependency-groups]
dev = [
    "mypy>=1.15",
    "pydantic>=2.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.11",
    "pre-commit>=4.0",
]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter (replaces flake8, isort, black)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "N",        # pep8-naming
    "UP",       # pyupgrade
    "B",        # flake8-bugbear
    "C4",       # flake8-comprehensions
    "SIM",      # flake8-simplify
    "TCH",      # flake8-type-checking
]
ignore = ["E501"]  # line length handled by ruff format

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy — static type checker
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = ["jose.*", "slowapi.*", "passlib.*", "opentelemetry.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest + coverage
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["services"]
asyncio_mode = "auto"
addopts = "--cov=services --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["services"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
fail_under = 80
