[project]
name = "worker"
version = "0.1.0"
description = "AudioMind async inference worker (Redis Streams consumer)"
requires-python = ">=3.13"
dependencies = [
    "redis[hiredis]>=5.0",
    "pydantic-settings>=2.6",
    # Qdrant vector store (RAG pipeline)
    "qdrant-client[fastembed]>=1.12",
]

[tool.uv]
package = false
