[project]
name = "worker"
version = "0.1.0"
description = "AudioMind async inference worker (Redis Streams consumer)"
requires-python = ">=3.13"
dependencies = [
    "audiomind-shared",
    "redis[hiredis]>=5.0",
    "pydantic-settings>=2.6",
    # Qdrant vector store (RAG pipeline)
    "qdrant-client[fastembed]>=1.12",
    # Prometheus metrics server
    "prometheus-client>=0.21",
    # MLflow — inference metrics tracking
    "mlflow>=3.0",
    # HTTP client for calling step services in the pipeline runner
    "httpx>=0.28",
]

[tool.uv]
package = false

[tool.uv.sources]
audiomind-shared = { workspace = true }
