[project]
name = "step-vision-clip"
version = "0.1.0"
description = "Inferflow step: image embedding via FastEmbed CLIP-like models"
requires-python = ">=3.13"
dependencies = [
    "inferflow-step-sdk",
    "fastembed>=0.4",
    "pydantic-settings>=2.0",
    "uvicorn[standard]>=0.30",
]

[tool.uv]
package = false

[tool.uv.sources]
inferflow-step-sdk = { workspace = true }
